examples/test/testpolicy9952.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9952
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key22: value17
      key47: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value3
          key12: value40
          key23: value35
      podSelector:
        matchLabels:
          key22: value41
          key32: value24
          key25: value5
